--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -24,15 +24,6 @@ header {
   padding: 10px 20px;
   border-bottom: 1px solid #ddd;
 }
-header .logo {
-  width: 200px;
-  height: 60px;
-  font-size: 1.5em;
-  font-weight: bold;
-  background-image: url(../img/22116270_1114.jpg);
-  background-size: 120%;
-  background-position: center;
-}
 header nav ul {
   list-style: none;
   padding: 0;
@@ -46,6 +37,13 @@ header li {
 header a {
   text-decoration: none;
   color: #333;
+}
+
+.logo {
+  width: 220px;
+}
+.logo img {
+  width: 100%;
 }
 
 .s-hero {
@@ -63,14 +61,14 @@ header a {
   width: 50%;
   height: 100%;
   background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 .s-hero .box-content-img-home {
-  background-image: url(../img/14241043_49_Eagle.svg);
-  background-size: 230%;
+  background-image: url(../img/bg-shero1.webp);
 }
 .s-hero .box-content-img-2 {
-  background-image: url(../img/31530356_bird_2.svg);
-  background-size: 150%;
+  background-image: url(../img/bg-shero2.webp);
 }
 .s-hero .box-text h2 {
   font-size: 72px;
@@ -82,18 +80,20 @@ header a {
 }
 
 @media (max-width: 1024px) {
-  nav {
+  nav, button {
     display: none;
   }
   .grid-container {
     padding: 32px;
     flex-direction: column;
+    border-bottom: solid #000 1px;
   }
   .box-content-img-home, .box-content-img-2 {
     width: 100%;
-    height: 500px;
-    background-size: 100%;
     background-repeat: no-repeat;
+  }
+  .box-content-img-home .box-content-img-home, .box-content-img-2 .box-content-img-home {
+    background-size: cover;
   }
   .s-hero .box-text h2 {
     font-size: 48px;
