--- a/assets/sass/breakpoint.sass
+++ b/assets/sass/breakpoint.sass
@@ -21,3 +21,10 @@
 
         p
             font-size: 24px
+
+    .sh-3
+        .grid-container
+            display: grid !important
+            grid-template-columns: 1fr !important
+            grid-template-rows: auto !important
+            gap: 1rem !important
