--- a/assets/sass/breakpoint.css
+++ b/assets/sass/breakpoint.css
@@ -20,4 +20,10 @@
   .s-hero .box-text p {
     font-size: 24px;
   }
+  .sh-3 .grid-container {
+    display: grid !important;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: auto !important;
+    gap: 1rem !important;
+  }
 }/*# sourceMappingURL=breakpoint.css.map */
