--- a/assets/sass/button.sass
+++ b/assets/sass/button.sass
@@ -1,8 +1,13 @@
+@import 'variables'
 
 .cta-button
-    padding: 10px 20px
-    background-color: #007bff
-    color: white
-    border: none
-    border-radius: 5px
-    cursor: pointer
+    padding: 1rem
+    background-color: $color-dark-red
+    color: $color-white
+    border-radius: .5rem
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out
+
+    &:hover
+        transform: translateY(-1px)
+        &:active
+            transform: translateY(0)
