--- a/assets/sass/reset.sass
+++ b/assets/sass/reset.sass
@@ -1,1 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Satoshi:wght@400;700&display=swap')
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    -webkit-font-smoothing: antialiased
+    font-family: Satoshi
 
+img
+    max-width: 100%
+    display: block
+
+a
+    display: inline-block
+    text-decoration: none
+
+ul
+    list-style: none
+
+button
+    border: 0
+    cursor: pointer
+
+html
+    font-size: 62.5%
