--- a/assets/sass/breakpoint.sass
+++ b/assets/sass/breakpoint.sass
@@ -22,6 +22,9 @@
         p
             font-size: 24px
 
+    .sh-1
+        padding-top: 80px
+
     .sh-3
         .grid-container
             display: grid !important
