--- a/assets/sass/breakpoint.sass
+++ b/assets/sass/breakpoint.sass
@@ -1,8 +1,13 @@
+/* -- breakpoint list --*/
+/* 280, 320, 360, 414, 480, 576, 600 ,768 */
+
+@import 'variables'
+
+@media (min-width:1025px)
+#menu-square
+    display: none
+
 @media (max-width: 1024px)
-
-    nav, button
-        display: none
-
     .grid-container
         padding: 32px
         flex-direction: column
@@ -14,20 +19,79 @@
 
         .box-content-img-home
             background-size: cover
-
     .s-hero .box-text
         h2
             font-size: 48px
-
         p
             font-size: 24px
 
     .sh-1
         padding-top: 80px
 
-    .sh-3
-        .grid-container
-            display: grid !important
-            grid-template-columns: 1fr !important
-            grid-template-rows: auto !important
-            gap: 1rem !important
+@media (max-width: 768px)
+header
+    display: flex
+    justify-content: space-between
+
+    #menu-toggle, #Ct-button
+        display: none
+
+    #menu-square
+        display: block
+        position: relative
+        z-index: 1001
+        cursor: pointer
+
+    .menu
+        position: fixed
+        top: 0
+        right: 0
+        background-color: $color-light-violet
+        display: none
+        flex-direction: column
+        align-items: center
+        padding: 2rem
+        z-index: 1000
+        height: 320px
+        width: 220px
+        overflow-y: auto
+        border-bottom-left-radius: 40%
+
+    &.active
+        display: flex
+    li
+        margin: 10px 0
+    a
+        font-size: 2.4rem
+        color: $color-white
+        transition: color 0.3s ease
+        &:hover
+            #Ct-button
+                display: none
+
+/*     .menu.active #Ct-button
+ display: block
+ margin-top: auto
+ padding: 15px 5px */ 
+
+@media (max-width:600px)
+    header
+        width: 100%
+        min-width: 100%
+        justify-content: space-between
+
+    .box-content-img-3,
+    .box-content-img-4,
+    .box-content-img-5,
+    .box-content-img-6
+        background-size: 75%
+        background-position: left
+        width: 80%
+
+@media screen and (min-width: 280px) and (max-width: 600px)
+    .s-hero .box-text
+        h2
+            font-size: 3.2rem
+
+        p
+            font-size: 2rem
