--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -86,10 +86,11 @@ header a:hover {
 .s-hero .box-content-img-4,
 .s-hero .box-content-img-5,
 .s-hero .box-content-img-6 {
-  width: 42rem;
-  height: 40rem;
-  background-size: cover;
+  width: 40rem;
+  height: 38rem;
+  background-size: 90%;
   background-position: center;
+  background-repeat: no-repeat;
 }
 .s-hero .box-content-img-3 {
   background-image: url(../img/bg-shero3.webp);
@@ -117,9 +118,9 @@ header a:hover {
 }
 .sh-3 .grid-container {
   height: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  /*         display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: repeat(2, 1fr); */
   gap: 10rem;
   justify-items: center;
   align-items: center;
@@ -205,10 +206,13 @@ footer .footer-copyright p {
   font-size: 1.2rem;
 }
 
+/* -- breakpoint list --*/
+/* 280, 320, 360, 414, 480, 576, 600 ,768 */
+#menu-square {
+  display: none;
+}
+
 @media (max-width: 1024px) {
-  nav, button {
-    display: none;
-  }
   .grid-container {
     padding: 32px;
     flex-direction: column;
@@ -230,11 +234,75 @@ footer .footer-copyright p {
   .sh-1 {
     padding-top: 80px;
   }
-  .sh-3 .grid-container {
-    display: grid !important;
-    grid-template-columns: 1fr !important;
-    grid-template-rows: auto !important;
-    gap: 1rem !important;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+}
+header #menu-toggle, header #Ct-button {
+  display: none;
+}
+header #menu-square {
+  display: block;
+  position: relative;
+  z-index: 1001;
+  cursor: pointer;
+}
+header .menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #9370DB;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  z-index: 1000;
+  height: 320px;
+  width: 220px;
+  overflow-y: auto;
+  border-bottom-left-radius: 40%;
+}
+header.active {
+  display: flex;
+}
+header li {
+  margin: 10px 0;
+}
+header a {
+  font-size: 2.4rem;
+  color: #fff;
+  transition: color 0.3s ease;
+}
+header a:hover #Ct-button {
+  display: none;
+}
+
+/*     .menu.active #Ct-button
+ * display: block
+ * margin-top: auto
+ * padding: 15px 5px */ 
+@media (max-width: 600px) {
+  header {
+    width: 100%;
+    min-width: 100%;
+    justify-content: space-between;
+  }
+  .box-content-img-3,
+  .box-content-img-4,
+  .box-content-img-5,
+  .box-content-img-6 {
+    background-size: 75%;
+    background-position: left;
+    width: 80%;
+  }
+}
+@media screen and (min-width: 280px) and (max-width: 600px) {
+  .s-hero .box-text h2 {
+    font-size: 3.2rem;
+  }
+  .s-hero .box-text p {
+    font-size: 2rem;
   }
 }
 * {
