--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Satoshi:wght@400;700&display=swap");
 .grid-container {
   width: 1440px;
@@ -25,7 +26,7 @@
 
 header {
   position: fixed;
-  z-index: 3000;
+  z-index: 1;
   background-color: #fff;
   width: 100%;
   display: flex;
@@ -150,11 +151,30 @@ header a:hover {
 }
 
 .sh-4 {
-  height: 1080px;
+  /*     height: 1080px;
+      width: 100%; */
+  border: 1px solid red;
   background-image: url(../img/bg-shero7.webp);
   background-size: cover;
   background-position: left center;
   background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+  z-index: 10;
+  /* Garante que a seção fique acima do footer */
+}
+
+.sh-4 .grid-container {
+  height: 100%;
+  width: 100%;
+  border: 1px solid red;
+}
+
+.sh-4 .circle {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+  position: absolute;
 }
 
 footer {
@@ -268,7 +288,7 @@ header #menu-toggle, header #Ct-button {
 header #menu-square {
   display: block;
   position: relative;
-  z-index: 1001;
+  z-index: 3;
   cursor: pointer;
 }
 header .menu {
@@ -280,7 +300,7 @@ header .menu {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  z-index: 1000;
+  z-index: 3;
   height: 320px;
   width: 220px;
   overflow-y: auto;
