--- a/assets/sass/breakpoint.css
+++ b/assets/sass/breakpoint.css
@@ -92,4 +92,14 @@ header a:hover #Ct-button {
   .s-hero .box-text p {
     font-size: 2rem;
   }
+  .sh-4 {
+    padding-right: 50rem;
+  }
+  .sh-4 .sh-4 .grid-container {
+    min-height: 60rem;
+  }
+  .sh-4 .circle {
+    width: 2rem;
+    height: 2rem;
+  }
 }/*# sourceMappingURL=breakpoint.css.map */
