--- a/assets/sass/breakpoint.sass
+++ b/assets/sass/breakpoint.sass
@@ -90,3 +90,13 @@ header
 
         p
             font-size: 2rem
+
+    .sh-4
+        padding-right: 50rem
+        .sh-4 .grid-container
+
+            min-height: 60rem// Garante espaço para as esferas
+
+    .sh-4 .circle
+        width: 2rem
+        height: 2rem
