--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Satoshi:wght@400;700&display=swap");
 .grid-container {
   width: 1440px;
@@ -151,9 +150,7 @@ header a:hover {
 }
 
 .sh-4 {
-  /*     height: 1080px;
-      width: 100%; */
-  border: 1px solid red;
+  height: 386px;
   background-image: url(../img/bg-shero7.webp);
   background-size: cover;
   background-position: left center;
@@ -161,18 +158,18 @@ header a:hover {
   position: relative;
   overflow: hidden;
   z-index: 10;
-  /* Garante que a seção fique acima do footer */
+  padding-bottom: 400px;
 }
 
 .sh-4 .grid-container {
-  height: 100%;
   width: 100%;
-  border: 1px solid red;
+  height: 100%;
+  position: relative;
 }
 
 .sh-4 .circle {
-  width: 8rem;
-  height: 8rem;
+  width: 6rem;
+  height: 6rem;
   border-radius: 50%;
   position: absolute;
 }
@@ -186,27 +183,27 @@ footer .footer-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 20px;
+  gap: 2rem;
 }
 footer .footer-logo img {
-  width: 150px;
+  width: 15rem;
 }
 footer .footer-social a {
-  margin: 0 10px;
+  margin: 0 1rem;
 }
 footer .footer-social a img {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 footer .footer-contact,
 footer .footer-credits,
 footer .footer-newsletter {
-  flex: 1 1 200px;
+  flex: 1 1 20rem;
 }
 footer .footer-contact h3,
 footer .footer-credits h3,
 footer .footer-newsletter h3 {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
   font-size: 1.5rem;
 }
 footer .footer-contact p,
@@ -217,6 +214,8 @@ footer .footer-newsletter p,
 footer .footer-newsletter a {
   font-size: 1.4rem;
   color: #333333;
+  padding: 1%;
+  cursor: pointer;
 }
 footer .footer-newsletter form {
   display: flex;
@@ -342,6 +341,16 @@ header a:hover #Ct-button {
   }
   .s-hero .box-text p {
     font-size: 2rem;
+  }
+  .sh-4 {
+    padding-right: 50rem;
+  }
+  .sh-4 .sh-4 .grid-container {
+    min-height: 60rem;
+  }
+  .sh-4 .circle {
+    width: 2rem;
+    height: 2rem;
   }
 }
 * {
