--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -152,9 +152,7 @@ header {
 }
 
 .sh-4 {
-/*     height: 1080px;
-    width: 100%; */
-    border: 1px solid red;
+    height: 386px;
     background-image: url(../img/bg-shero7.webp);
     background-size: cover;
     background-position: left center;
@@ -162,18 +160,19 @@ header {
     position: relative;
     overflow: hidden;
     z-index: 10;
-    /* Garante que a seção fique acima do footer */
+    padding-bottom: 400px;
 }
 
 .sh-4 .grid-container {
-    height: 100%;
     width: 100%;
-    border: 1px solid red;
+    height: 100%; 
+    position: relative;
 }
 
+
 .sh-4 .circle {
-    width: 8rem;
-    height: 8rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     position: absolute;
 }
@@ -187,29 +186,29 @@ footer {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        gap: 20px;
+        gap: 2rem;
     }
 
     .footer-logo img {
-        width: 150px;
+        width: 15rem;
     }
 
     .footer-social a {
-        margin: 0 10px;
+        margin: 0 1rem;
 
         img {
-            width: 24px;
-            height: 24px;
+            width: 2.4rem;
+            height: 2.4rem;
         }
     }
 
     .footer-contact,
     .footer-credits,
     .footer-newsletter {
-        flex: 1 1 200px;
+        flex: 1 1 20rem;
 
         h3 {
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
             font-size: 1.5rem;
         }
 
@@ -217,6 +216,8 @@ footer {
         a {
             font-size: 1.4rem;
             color: $color-gray;
+            padding: 1%;
+            cursor: pointer;
         }
 
     }
